<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="gravity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_float_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            map:backgroundTint="@color/white"
            map:borderWidth="0dp"
            map:elevation="1dp"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintVertical_bias="0.0"
            map:pressedTranslationZ="1dp"
            map:srcCompat="@drawable/layers" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/default_float_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:contentDescription="@string/default_map"
            android:focusable="true"
            android:visibility="invisible"
            map:backgroundTint="@color/white"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toStartOf="@+id/terrain_float_btn"
            map:layout_constraintTop_toTopOf="parent"
            map:srcCompat="@drawable/map" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/terrain_float_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:contentDescription="@string/terrain"
            android:focusable="true"
            android:visibility="invisible"
            map:backgroundTint="@color/white"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toStartOf="@+id/satellite_float_btn"
            map:layout_constraintTop_toTopOf="parent"
            map:srcCompat="@drawable/terrain" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/satellite_float_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:contentDescription="@string/satellite"
            android:focusable="true"
            android:visibility="invisible"
            map:backgroundTint="@color/white"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toStartOf="@+id/add_float_btn"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintVertical_bias="0.0"
            map:srcCompat="@drawable/satellite" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="123dp"
            android:layout_height="27dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="18dp"
            android:text="@string/bus_route"
            android:textAlignment="center"
            android:textSize="24sp"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toStartOf="@+id/default_float_btn"
            map:layout_constraintHorizontal_bias="0.0"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="667dp"
        tools:context=".Maps.Bus_Route" />

</LinearLayout>